Disable update DB
